--- a/index.html
+++ b/index.html
@@ -720,27 +720,27 @@
 
             <div class="social">
               <div class="row">
-                <div class="col-sm-2">
+                <div class="col-2">
                   <div class="facebook">
                     <i class="fa-brands fa-facebook" style="color: blue;"></i>
                   </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-2">
                   <div class="facebook">
                     <i class="fa-brands fa-linkedin" style="color: blue;"></i>
                   </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-2">
                   <div class="facebook">
                     <i class="fa-brands fa-instagram" style="color: #1d1c1c;"></i>
                   </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-2">
                   <div class="facebook">
                     <i class="fa-brands fa-youtube" style="color: #fa0404;"></i>
                   </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-2">
                   <div class="facebook">
                     <i class="fa-brands fa-twitter" style="color: #390efc;"></i>
                   </div>
@@ -772,12 +772,12 @@
             </div>
             <div class="underline"></div>
             <div class="row mt-3">
-              <div class="col-sm-6">
+              <div class="col-6">
                 <div class="updeat-img">
                   <img src="./assets/img/fotter/07-1024x768.jpeg" alt="">
                 </div>
               </div>
-              <div class="col-sm-6">
+              <div class="col-6">
                 <div class="updeat-text">
                   <a href="#"> "A-PAD Award 2023" to Mr. Saber Hossain Chowdhury MP, Group Director, Karnaphuli
                     Group</a>
@@ -785,12 +785,12 @@
               </div>
             </div>
             <div class="row mt-2">
-              <div class="col-sm-6">
+              <div class="col-6">
                 <div class="updeat-img">
                   <img src="./assets/img/fotter/3.jpg" alt="">
                 </div>
               </div>
-              <div class="col-sm-6">
+              <div class="col-6">
                 <div class="updeat-text">
                   <a href="#"> 250 food packs for the Forcibly Displaced People from Myanmar (FDMNs) at Camp-15 Jamtoli
                     CPHC center</a>
@@ -798,12 +798,12 @@
               </div>
             </div>
             <div class="row mt-2">
-              <div class="col-sm-6">
+              <div class="col-6">
                 <div class="updeat-img">
                   <img src="./assets/img/fotter/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="">
                 </div>
               </div>
-              <div class="col-sm-6">
+              <div class="col-6">
                 <div class="updeat-text">
                   <a href="#">CIS paid a courtesy visit to welcome the newly appointed Honorable Ambassador Mr. Iwama
                     Kiminori at the Embassy of Japan in Bangladesh</a>
@@ -811,12 +811,12 @@
               </div>
             </div>
             <div class="row mt-2">
-              <div class="col-sm-6">
+              <div class="col-6">
                 <div class="updeat-img">
                   <img src="./assets/img/fotter/Saber-Hossain.jpg" alt="">
                 </div>
               </div>
-              <div class="col-sm-6">
+              <div class="col-6">
                 <div class="updeat-text">
                   <a href="#">Disaster Preparedness Day 2023</a>
                 </div>
