--- a/history.html
+++ b/history.html
@@ -192,27 +192,27 @@
 
                         <div class="social">
                             <div class="row">
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="facebook">
                                         <i class="fa-brands fa-facebook" style="color: blue;"></i>
                                     </div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="facebook">
                                         <i class="fa-brands fa-linkedin" style="color: blue;"></i>
                                     </div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="facebook">
                                         <i class="fa-brands fa-instagram" style="color: #1d1c1c;"></i>
                                     </div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="facebook">
                                         <i class="fa-brands fa-youtube" style="color: #fa0404;"></i>
                                     </div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="facebook">
                                         <i class="fa-brands fa-twitter" style="color: #390efc;"></i>
                                     </div>
@@ -244,12 +244,12 @@
                         </div>
                         <div class="underline"></div>
                         <div class="row mt-3">
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-img">
                                     <img src="./assets/img/fotter/07-1024x768.jpeg" alt="">
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-text">
                                     <a href="#"> "A-PAD Award 2023" to Mr. Saber Hossain Chowdhury MP, Group Director,
                                         Karnaphuli
@@ -258,12 +258,12 @@
                             </div>
                         </div>
                         <div class="row mt-2">
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-img">
                                     <img src="./assets/img/fotter/3.jpg" alt="">
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-text">
                                     <a href="#"> 250 food packs for the Forcibly Displaced People from Myanmar (FDMNs)
                                         at Camp-15 Jamtoli
@@ -272,12 +272,12 @@
                             </div>
                         </div>
                         <div class="row mt-2">
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-img">
                                     <img src="./assets/img/fotter/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="">
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-text">
                                     <a href="#">CIS paid a courtesy visit to welcome the newly appointed Honorable
                                         Ambassador Mr. Iwama
@@ -286,12 +286,12 @@
                             </div>
                         </div>
                         <div class="row mt-2">
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-img">
                                     <img src="./assets/img/fotter/Saber-Hossain.jpg" alt="">
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-text">
                                     <a href="#">Disaster Preparedness Day 2023</a>
                                 </div>
