--- a/mission&vision.html
+++ b/mission&vision.html
@@ -45,7 +45,7 @@
                 <div class="collapse navbar-collapse" id="mynavbar">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">HOME</a>
+                            <a class="nav-link" href="./index.html">HOME</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">WHO WE ARE</a>
@@ -148,6 +148,43 @@
         </nav>
     </section>
     <!-- nav-section-end -->
+<!-- mission&vision-hero-section-start -->
+<section id="mission-vision-main-hero">
+    <div class="mission-vision-hero">
+        <h1>MISSION <span style="color: red;"> & VISION</span></h1>
+    </div>
+</section>
+<!-- mission&vision-hero-section-end -->
+<!-- mission&vision-text-section-start -->
+<section id="mission-vision">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="mission">
+                    <h2>MISSION</h2>
+                    <p>Build a safer community by reducing the risk of a natural disasters and human induced hazards by developing efficient response management systems, providing humanitarian support, tackling climate change, providing healthcare to the undertaking research and innovation programs. </p>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="vission">
+                    <h2>VISION</h2>
+                    <ul>
+                        <li>In alliance with the communities and other stakeholders, develop networks to appropriately coordinate disaster risk reduction and management.</li>
+                        <li>Develop and enhance sustainable disaster risk management capacities and mechanisms.</li>
+                        <li>Raising awareness and exchange of information of disaster risk management expertise and experience.</li>
+                        <li>Skills & development training for building safer communities.</li>
+                        <li>Respond to emergency situations including humanitarian crisis.</li>
+                       <li>Tackle impacts of climate change and develop resilience among vulnerable groups
+                    </li>
+                    <li>Develop knowledge and capacity through effective research and innovation to support our broader agenda.</li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- mission&vision-text-section-end -->
 
 
 
@@ -170,27 +207,27 @@
 
                         <div class="social">
                             <div class="row">
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="facebook">
                                         <i class="fa-brands fa-facebook" style="color: blue;"></i>
                                     </div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="facebook">
                                         <i class="fa-brands fa-linkedin" style="color: blue;"></i>
                                     </div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="facebook">
                                         <i class="fa-brands fa-instagram" style="color: #1d1c1c;"></i>
                                     </div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="facebook">
                                         <i class="fa-brands fa-youtube" style="color: #fa0404;"></i>
                                     </div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="facebook">
                                         <i class="fa-brands fa-twitter" style="color: #390efc;"></i>
                                     </div>
@@ -222,12 +259,12 @@
                         </div>
                         <div class="underline"></div>
                         <div class="row mt-3">
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-img">
                                     <img src="./assets/img/fotter/07-1024x768.jpeg" alt="">
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-text">
                                     <a href="#"> "A-PAD Award 2023" to Mr. Saber Hossain Chowdhury MP, Group Director,
                                         Karnaphuli
@@ -236,12 +273,12 @@
                             </div>
                         </div>
                         <div class="row mt-2">
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-img">
                                     <img src="./assets/img/fotter/3.jpg" alt="">
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-text">
                                     <a href="#"> 250 food packs for the Forcibly Displaced People from Myanmar (FDMNs)
                                         at Camp-15 Jamtoli
@@ -250,12 +287,12 @@
                             </div>
                         </div>
                         <div class="row mt-2">
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-img">
                                     <img src="./assets/img/fotter/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="">
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-text">
                                     <a href="#">CIS paid a courtesy visit to welcome the newly appointed Honorable
                                         Ambassador Mr. Iwama
@@ -264,12 +301,12 @@
                             </div>
                         </div>
                         <div class="row mt-2">
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-img">
                                     <img src="./assets/img/fotter/Saber-Hossain.jpg" alt="">
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-text">
                                     <a href="#">Disaster Preparedness Day 2023</a>
                                 </div>
