--- a/governing board.html
+++ b/governing board.html
@@ -149,8 +149,247 @@
     </section>
     <!-- nav-section-end -->
 
+    <!-- governing-board-hero-section-start -->
+    <section id="governing-board-main-hero">
+        <div class="governing-board-hero">
+            <h1>GOVERNING <span style="color: red;">BOARD</span></h1>
+        </div>
+    </section>
+    <!-- governing-board-hero-section-end -->
+
+    <!-- governing-board-card-section-start -->
+    <section id="governing-board-card">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4 mt-3"></div>
+                <div class="col-sm-4 mt-3">
+                    <div class="governing-board-info-card">
+                        <div class="governing-board-card-img">
+                            <a href="#"><img src="./assets/img/governing-board-img/300-300CH.jpg" alt=""></a>
+                        </div>
+                        <div class="governing-board-card-text mt-5">
+                            <h5> <a href="#">Prof. Quazi Quamruzzaman</a></h2>
+                                <p>Chairman</p>
+                                <div class="governing-board-card-social">
+                                    <div class="row">
+                                        <div class="col-3"></div>
+                                        <div class="col-2">
+                                            <div class="governing-social">
+                                                <a href="#"><i class="fa-brands fa-facebook"
+                                                        style="color: #ffffff;"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="col-2">
+                                            <div class="governing-social">
+                                                <a href="#"> <i class="fa-brands fa-twitter"
+                                                        style="color: #ffffff;"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="col-2">
+                                            <div class="governing-social">
+                                                <a href="#"> <i class="fa-solid fa-p"
+                                                        style="color: #fafafa; padding-left: 5px;"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="col-3"></div>
 
 
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4 mt-3"></div>
+                <div class="col-sm-4 mt-3">
+                    <div class="governing-board-info-card">
+                        <div class="governing-board-card-img">
+                            <a href="#"><img src="./assets/img/governing-board-img/300-300.jpg" alt=""></a>
+                        </div>
+                        <div class="governing-board-card-text mt-5">
+                            <h5> <a href="#">Md. Jabed Yousuf</a></h2>
+                                <p>Vice-Chairman</p>
+                                <div class="governing-board-card-social">
+                                    <div class="row">
+                                        <div class="col-3"></div>
+                                        <div class="col-2">
+                                            <div class="governing-social">
+                                                <a href="#"><i class="fa-brands fa-facebook"
+                                                        style="color: #ffffff;"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="col-2">
+                                            <div class="governing-social">
+                                                <a href="#"> <i class="fa-brands fa-twitter"
+                                                        style="color: #ffffff;"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="col-2">
+                                            <div class="governing-social">
+                                                <a href="#"> <i class="fa-solid fa-p"
+                                                        style="color: #fafafa; padding-left: 5px;"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="col-3"></div>
+
+
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4 mt-3">
+                    <div class="governing-board-info-card">
+                        <div class="governing-board-card-img">
+                            <a href="#"><img src="./assets/img/governing-board-img/300-300-0S.jpg" alt=""></a>
+                        </div>
+                        <div class="governing-board-card-text mt-5">
+                            <h5> <a href="#">Sukumar Chakrabortty</a></h2>
+                                <p>Treasurer</p>
+                                <div class="governing-board-card-social">
+                                    <div class="row">
+                                        <div class="col-3"></div>
+                                        <div class="col-2">
+                                            <div class="governing-social">
+                                                <a href="#"><i class="fa-brands fa-facebook"
+                                                        style="color: #ffffff;"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="col-2">
+                                            <div class="governing-social">
+                                                <a href="#"> <i class="fa-brands fa-twitter"
+                                                        style="color: #ffffff;"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="col-2">
+                                            <div class="governing-social">
+                                                <a href="#"> <i class="fa-solid fa-p"
+                                                        style="color: #fafafa; padding-left: 5px;"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="col-3"></div>
+
+
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4 mt-3">
+                    <div class="governing-board-info-card">
+                        <div class="governing-board-card-img">
+                            <a href="#"><img src="./assets/img/governing-board-img/300-300-MD.jpg" alt=""></a>
+                        </div>
+                        <div class="governing-board-card-text mt-5">
+                            <h5> <a href="#">Md. Golam Mostofa</a></h2>
+                                <p>Member Secretary</p>
+                                <div class="governing-board-card-social">
+                                    <div class="row">
+                                        <div class="col-3"></div>
+                                        <div class="col-2">
+                                            <div class="governing-social">
+                                                <a href="#"><i class="fa-brands fa-facebook"
+                                                        style="color: #ffffff;"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="col-2">
+                                            <div class="governing-social">
+                                                <a href="#"> <i class="fa-brands fa-twitter"
+                                                        style="color: #ffffff;"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="col-2">
+                                            <div class="governing-social">
+                                                <a href="#"> <i class="fa-solid fa-p"
+                                                        style="color: #fafafa; padding-left: 5px;"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="col-3"></div>
+
+
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4 mt-3">
+                    <div class="governing-board-info-card">
+                        <div class="governing-board-card-img">
+                            <a href="#"><img src="./assets/img/governing-board-img/Dr-Omar-Sharif-qdr7k2t7xj24rffe8577t7z7lulx09h5u3e5fnw0qg.jpg" alt=""></a>
+                        </div>
+                        <div class="governing-board-card-text mt-5">
+                            <h5> <a href="#">Dr. Md. Omar Sharif Ibne Hasan</a></h2>
+                                <p>Member</p>
+                                <div class="governing-board-card-social">
+                                    <div class="row">
+                                        <div class="col-3"></div>
+                                        <div class="col-2">
+                                            <div class="governing-social">
+                                                <a href="#"><i class="fa-brands fa-facebook"
+                                                        style="color: #ffffff;"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="col-2">
+                                            <div class="governing-social">
+                                                <a href="#"> <i class="fa-brands fa-twitter"
+                                                        style="color: #ffffff;"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="col-2">
+                                            <div class="governing-social">
+                                                <a href="#"> <i class="fa-solid fa-p"
+                                                        style="color: #fafafa; padding-left: 5px;"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="col-3"></div>
+
+
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4 mt-3"></div>
+                <div class="col-sm-4 mt-3">
+                    <div class="governing-board-info-card">
+                        <div class="governing-board-card-img">
+                            <a href="#"><img src="./assets/img/governing-board-img/hashi-qdr7k2t7xj24rffe8577t7z7lulx09h5u3e5fnw0qg.jpg" alt=""></a>
+                        </div>
+                        <div class="governing-board-card-text mt-5">
+                            <h5> <a href="#">Ms. Hasi Chakma</a></h2>
+                                <p>Member</p>
+                                <div class="governing-board-card-social">
+                                    <div class="row">
+                                        <div class="col-3"></div>
+                                        <div class="col-2">
+                                            <div class="governing-social">
+                                                <a href="#"><i class="fa-brands fa-facebook"
+                                                        style="color: #ffffff;"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="col-2">
+                                            <div class="governing-social">
+                                                <a href="#"> <i class="fa-brands fa-twitter"
+                                                        style="color: #ffffff;"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="col-2">
+                                            <div class="governing-social">
+                                                <a href="#"> <i class="fa-solid fa-p"
+                                                        style="color: #fafafa; padding-left: 5px;"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="col-3"></div>
+
+
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- governing-board-card-section-end -->
 
 
 
@@ -170,27 +409,27 @@
 
                         <div class="social">
                             <div class="row">
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="facebook">
                                         <i class="fa-brands fa-facebook" style="color: blue;"></i>
                                     </div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="facebook">
                                         <i class="fa-brands fa-linkedin" style="color: blue;"></i>
                                     </div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="facebook">
                                         <i class="fa-brands fa-instagram" style="color: #1d1c1c;"></i>
                                     </div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="facebook">
                                         <i class="fa-brands fa-youtube" style="color: #fa0404;"></i>
                                     </div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="facebook">
                                         <i class="fa-brands fa-twitter" style="color: #390efc;"></i>
                                     </div>
@@ -222,12 +461,12 @@
                         </div>
                         <div class="underline"></div>
                         <div class="row mt-3">
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-img">
                                     <img src="./assets/img/fotter/07-1024x768.jpeg" alt="">
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-text">
                                     <a href="#"> "A-PAD Award 2023" to Mr. Saber Hossain Chowdhury MP, Group Director,
                                         Karnaphuli
@@ -236,12 +475,12 @@
                             </div>
                         </div>
                         <div class="row mt-2">
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-img">
                                     <img src="./assets/img/fotter/3.jpg" alt="">
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-text">
                                     <a href="#"> 250 food packs for the Forcibly Displaced People from Myanmar (FDMNs)
                                         at Camp-15 Jamtoli
@@ -250,12 +489,12 @@
                             </div>
                         </div>
                         <div class="row mt-2">
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-img">
                                     <img src="./assets/img/fotter/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="">
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-text">
                                     <a href="#">CIS paid a courtesy visit to welcome the newly appointed Honorable
                                         Ambassador Mr. Iwama
@@ -264,12 +503,12 @@
                             </div>
                         </div>
                         <div class="row mt-2">
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-img">
                                     <img src="./assets/img/fotter/Saber-Hossain.jpg" alt="">
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-text">
                                     <a href="#">Disaster Preparedness Day 2023</a>
                                 </div>
