--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
     <div class="vision-header">
       <h1>VISION</h1>
     </div>
+    <div class="section-header-underline"></div>
     <div class="container">
       <div class="row">
         <div class="col-sm-1"></div>
@@ -261,6 +262,7 @@
     <div class="mission-header">
       <h1>MISSION</h1>
     </div>
+    <div class="section-header-underline"></div>
     <div class="container">
       <div class="row">
         <div class="col-sm-1"></div>
@@ -292,7 +294,9 @@
       <div class="row">
         <div class="activities-header">
           <h1>ACTIVITIES</h1>
+          <div class="section-header-underline"></div>
         </div>
+
       </div>
 
       <div class="row mt-5">
@@ -394,6 +398,7 @@
           <div class="work">
             <div class="work-header ">
               <h1>WORKING AREA</h1>
+              <div class="section-header-underline"></div>
               <div class="work-map ">
                 <img src="./assets/img/CIS-All-District-Working-Area-map-update.png" alt="">
               </div>
@@ -408,6 +413,7 @@
               <div class="row">
                 <div class="story-header">
                   <h1>STORY</h1>
+                  <div class="section-header-underline"></div>
                 </div>
               </div>
 
@@ -466,36 +472,37 @@
     <div class="impact-header">
       <h1>IMPACTS</h1>
     </div>
-    <div class="impact-main-area">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-3">
-            <div class="impact-item">
-              <h1>10+</h1>
-              <h2>YEARS</h2>
-            </div>
+    <div class="section-header-underline "></div>
+    <div class="impact-main-area mt-5">
+      <div class=" container">
+      <div class="row">
+        <div class="col-sm-3">
+          <div class="impact-item">
+            <h1>10+</h1>
+            <h2>YEARS</h2>
           </div>
-          <div class="col-sm-3">
-            <div class="impact-item">
-              <h1>150+</h1>
-              <h2>AREA</h2>
-            </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="impact-item">
+            <h1>150+</h1>
+            <h2>AREA</h2>
           </div>
-          <div class="col-sm-3">
-            <div class="impact-item">
-              <h1>100+</h1>
-              <h2>PROJECT</h2>
-            </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="impact-item">
+            <h1>100+</h1>
+            <h2>PROJECT</h2>
           </div>
-          <div class="col-sm-3">
-            <div class="impact-item">
-              <h1>1,000K+</h1>
-              <h2>PEOPLES</h2>
+        </div>
+        <div class="col-sm-3">
+          <div class="impact-item">
+            <h1>1,000K+</h1>
+            <h2>PEOPLES</h2>
 
-            </div>
           </div>
         </div>
       </div>
+    </div>
 
     </div>
   </section>
@@ -506,6 +513,7 @@
       <div class="row">
         <div class="feed-header">
           <h1>FEEDBACK</h1>
+          <div class="section-header-underline"></div>
         </div>
       </div>
 
@@ -589,7 +597,8 @@
     <div class="partner-header">
       <h1>PARTNERS</h1>
     </div>
-    <div class="pantner-info">
+    <div class="section-header-underline"></div>
+    <div class="pantner-info mt-5">
       <img src="./assets/img/patners-logo-01-1024x424.jpg" alt="">
     </div>
 
@@ -602,6 +611,7 @@
       <div class="gallery-header">
         <h1>PHOTO GALLERY
         </h1>
+        <div class="section-header-underline"></div>
       </div>
       <div class="container mt-5">
         <!-- Nav tabs -->
