--- a/Partners.html
+++ b/Partners.html
@@ -148,7 +148,34 @@
         </nav>
     </section>
     <!-- nav-section-end -->
+    <!-- partners-section-start -->
+    <section id="nav-main-partner">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 mt-5">
+                    <div class="international">
+                        <div class="international-logo">
+                            <i class="fa-regular fa-handshake" style="color: #ffffff;"></i>
+                        </div>
+                        <div class="international-text mt-3">
+                            <h3>INTERNATIONAL PARTNERS</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 mt-5">
+                    <div class="national">
+                        <div class="national-logo">
 
+                        </div>
+                        <div class="national-text mt-3">
+                            <h3>INTERNATIONAL PARTNERS</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- partners-section-end -->
 
 
     <!-- fotter-section-start -->
@@ -156,7 +183,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-3 ">
-                    <div class=" partner-society">
+                    <div class="partner-society">
                         <div class="society-logo">
                             <img src="./assets/img/cropped-cropped-cis-logo-1-11.png" alt="">
                         </div>
@@ -166,29 +193,29 @@
 
                         <div class="social">
                             <div class="row">
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="partner-facebook">
-                                        <i class="fa-brands fa-facebook" style="color: blue;"></i>
+                                        <a href="#"> <i class="fa-brands fa-facebook" style="color: blue;"></i></a>
                                     </div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="partner-facebook">
-                                        <i class="fa-brands fa-linkedin" style="color: blue;"></i>
+                                        <a href="#"> <i class="fa-brands fa-linkedin" style="color: blue;"></i></a>
                                     </div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="partner-facebook">
-                                        <i class="fa-brands fa-instagram" style="color: #1d1c1c;"></i>
+                                        <a href="#"> <i class="fa-brands fa-instagram" style="color: #1d1c1c;"></i></a>
                                     </div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="partner-facebook">
-                                        <i class="fa-brands fa-youtube" style="color: #fa0404;"></i>
+                                        <a href="#"> <i class="fa-brands fa-youtube" style="color: #fa0404;"></i></a>
                                     </div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="partner-facebook">
-                                        <i class="fa-brands fa-twitter" style="color: #390efc;"></i>
+                                        <a href="#"><i class="fa-brands fa-twitter" style="color: #390efc;"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -218,12 +245,12 @@
                         </div>
                         <div class="underline"></div>
                         <div class="row mt-3">
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-img">
                                     <img src="./assets/img/fotter/07-1024x768.jpeg" alt="">
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="partner-updeat-text">
                                     <a href="#"> "A-PAD Award 2023" to Mr. Saber Hossain Chowdhury MP, Group Director,
                                         Karnaphuli
@@ -232,12 +259,12 @@
                             </div>
                         </div>
                         <div class="row mt-2">
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-img">
                                     <img src="./assets/img/fotter/3.jpg" alt="">
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="partner-updeat-text">
                                     <a href="#"> 250 food packs for the Forcibly Displaced People from Myanmar (FDMNs)
                                         at Camp-15 Jamtoli
@@ -246,12 +273,12 @@
                             </div>
                         </div>
                         <div class="row mt-2">
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-img">
                                     <img src="./assets/img/fotter/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="">
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="partner-updeat-text">
                                     <a href="#">CIS paid a courtesy visit to welcome the newly appointed Honorable
                                         Ambassador Mr. Iwama
@@ -260,12 +287,12 @@
                             </div>
                         </div>
                         <div class="row mt-2">
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-img">
                                     <img src="./assets/img/fotter/Saber-Hossain.jpg" alt="">
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="partner-updeat-text">
                                     <a href="#">Disaster Preparedness Day 2023</a>
                                 </div>
@@ -284,7 +311,7 @@
                             <div class="call">
                                 <i class="fa-solid fa-phone" style="color: #ffffff;"></i>
                             </div>
-                            <div class="partner-namber">
+                            <div class="partner-namber ">
                                 <a href="#">+88 02-41031190</a>
                             </div>
                         </div>
@@ -302,16 +329,16 @@
                             <div class="area-icon">
                                 <i class="fa-solid fa-magnifying-glass-location" style="color: #ffffff;"></i>
                             </div>
-                            <div class="partner-area-name">
+                            <div class="partner-area-name ">
                                 <a href="#">190/1 Boro Moghbazar,
                                     Wireless Railgate,
                                     Dhaka- 1217, Bangladesh</a>
                             </div>
                         </div>
-                        <div class="partner-subscribe">
+                        <div class="partner-subscribe ">
                             <h1>Subscribe Now</h1>
                         </div>
-                        <div class="partner-for">
+                        <div class="partner-for ">
                             <p>Don’t miss our future updates! Get Subscribed Today!</p>
                         </div>
                         <div class="login">
@@ -323,6 +350,7 @@
 
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
@@ -345,29 +373,29 @@
 
                         <div class="social">
                             <div class="row">
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="facebook">
-                                        <i class="fa-brands fa-facebook" style="color: blue;"></i>
+                                        <a href="#"> <i class="fa-brands fa-facebook" style="color: blue;"></i></a>
                                     </div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="facebook">
-                                        <i class="fa-brands fa-linkedin" style="color: blue;"></i>
+                                        <a href="#"> <i class="fa-brands fa-linkedin" style="color: blue;"></i></a>
                                     </div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="facebook">
-                                        <i class="fa-brands fa-instagram" style="color: #1d1c1c;"></i>
+                                        <a href="#"> <i class="fa-brands fa-instagram" style="color: #1d1c1c;"></i></a>
                                     </div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="facebook">
-                                        <i class="fa-brands fa-youtube" style="color: #fa0404;"></i>
+                                        <a href="#"> <i class="fa-brands fa-youtube" style="color: #fa0404;"></i></a>
                                     </div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-2">
                                     <div class="facebook">
-                                        <i class="fa-brands fa-twitter" style="color: #390efc;"></i>
+                                        <a href="#"><i class="fa-brands fa-twitter" style="color: #390efc;"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -397,12 +425,12 @@
                         </div>
                         <div class="underline"></div>
                         <div class="row mt-3">
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-img">
                                     <img src="./assets/img/fotter/07-1024x768.jpeg" alt="">
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-text">
                                     <a href="#"> "A-PAD Award 2023" to Mr. Saber Hossain Chowdhury MP, Group Director,
                                         Karnaphuli
@@ -411,12 +439,12 @@
                             </div>
                         </div>
                         <div class="row mt-2">
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-img">
                                     <img src="./assets/img/fotter/3.jpg" alt="">
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-text">
                                     <a href="#"> 250 food packs for the Forcibly Displaced People from Myanmar (FDMNs)
                                         at Camp-15 Jamtoli
@@ -425,12 +453,12 @@
                             </div>
                         </div>
                         <div class="row mt-2">
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-img">
                                     <img src="./assets/img/fotter/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="">
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-text">
                                     <a href="#">CIS paid a courtesy visit to welcome the newly appointed Honorable
                                         Ambassador Mr. Iwama
@@ -439,12 +467,12 @@
                             </div>
                         </div>
                         <div class="row mt-2">
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-img">
                                     <img src="./assets/img/fotter/Saber-Hossain.jpg" alt="">
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-6">
                                 <div class="updeat-text">
                                     <a href="#">Disaster Preparedness Day 2023</a>
                                 </div>
